# h2ctypes

./: .gitignore  README.md  pyproject.toml
h2ctypes/: dump.py  struct.py.j2
test_data/: basic.h
tests/: basic.h  test_basic.py
