[project]
name = "h2ctypes"
version = "0.1.0"
authors = [
    { name = "jwl", email = "408066557@qq.com" }
]
description = "convert c++ header files to python ctypes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "typer>=0.19.1",
]

[project.scripts]
h2ctypes_dump = "h2ctypes.dump:app"

[tool.setuptools.package-data]
"h2ctypes" = [
    "**/*.j2"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
